<resources>
    <string name="app_name" translatable="false">Gelecek Bilimde</string>
    <string name="default_notification_channel" translatable="false">default_notification_channel</string>
    <string name="default_notification">Default Notification</string>
    <string name="article">Article</string>
    <string name="videos">Videos</string>
    <string name="marked">Marked</string>
    <string name="contact">Contact</string>
    <string name="write_something">Write something...</string>
    <string name="bilim_leti_im_platformu">Bilim İletişim Platformu</string>
    <string name="category">Category</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="author_name">Author Name</string>
    <string name="description">Description</string>
    <string name="blog_title">Blog Title</string>
    <string name="loading">Loading...</string>
    <string name="alert_picture_mode"><![CDATA[In order to enter picture in picture mode you need a SDK version >= N.]]></string>
    <string name="gelecek_bilimde_nedir">Gelecek Bilimde Nedir?</string>
    <string name="gelecek_bilimde_nedir_des">Gelecek Bilimde, toplum ile bilim arasındaki köprü olmayı amaçlar. 40’ı aşkın genç gönüllüsü ile birlikte bilimi daha çok insana ulaştırabilmek ve bilimsel düşünce farkındalığı yaratmak için tutku ve heyecanla çalışır.</string>
    <string name="neden_farkl_y_z">Neden Farklıyız?</string>
    <string name="neden_farkl_y_z_desc">Çünkü, bilimi sevdirmek için bilimi popülerleştirmek, basitleştirmek, haber değeri katmak için abartmak gerektiğini düşünmüyoruz. Bilimsel bilgileri “sadeleştirip” aşağı çekeceğimize, bilim seveleri ve bilim insanı adaylarını yukarı çıkarmayı tercih ediyoruz.</string>
    <string name="baz_yeniliklerimiz">Bazı Yeniliklerimiz</string>
    <string name="twitch">Twitch</string>
    <string name="bizi_destekle">Bizi Destekle</string>
    <string name="twitter">Twitter</string>
    <string name="spotify">Spotify</string>
    <string name="instagram">Instagram</string>
    <string name="uygulamay_de_erlendir">Uygulamayı Değerlendir</string>
    <string name="uygulama_hakk_nda">Uygulama Hakkında</string>
    <string name="youtube">Youtube</string>
    <string name="teyihan_aksu">Teyihan Aksu</string>
    <string name="github">Github</string>
    <string name="geli_tiriciler">Geliştiriciler</string>
    <string name="version">Version:</string>
    <string name="alert_error">Bir Hata Oluştu</string>
</resources>