<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/icon" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/color_primary_dark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/bilim_leti_im_platformu"
                android:textColor="@color/color_primary_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/quastion_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/gelecek_bilimde_nedir"
                android:textColor="@color/color_primary_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/answer_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quastion_one"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/poppins"
                android:text="@string/gelecek_bilimde_nedir_des"
                android:textColor="@color/color_primary_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/quastion_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer_one"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/neden_farkl_y_z"
                android:textColor="@color/color_primary_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/answer_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quastion_two"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/poppins"
                android:text="@string/neden_farkl_y_z_desc"
                android:textColor="@color/color_primary_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer_two"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/baz_yeniliklerimiz"
                android:textColor="@color/color_primary_dark"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/button_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/support"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/donation_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/view_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/donation" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/bizi_destekle"
                        android:textColor="@color/color_primary_dark"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/youtube_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/view_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/youtube" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/youtube"
                        android:textColor="@color/color_primary_dark"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/star_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/view_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/star" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/uygulamay_de_erlendir"
                        android:textColor="@color/color_primary_dark"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/developer_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/view_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/info" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/uygulama_hakk_nda"
                        android:textColor="@color/color_primary_dark"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/verison_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_view"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:textColor="@color/colorBorder"
                android:textSize="16sp"
                tools:text="version:2.0.0 | Gelecek Bilimde" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>